fix minor error in userController test