@@ -4,8 +4,7 @@ import com.example.bugwarshealerbackend.config.SecurityConfig;
 import com.example.bugwarshealerbackend.exceptions.ResourceNotFoundException;
 import com.example.bugwarshealerbackend.jpa.UserRepository;
 import com.example.bugwarshealerbackend.model.User;
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
+
 import org.junit.Before;
 
 import org.junit.jupiter.api.Test;
@@ -19,29 +18,25 @@ import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMock
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.context.annotation.Import;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
+
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.MvcResult;
-import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
+
 
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.web.context.WebApplicationContext;
 
-import java.util.Arrays;
+
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import static org.mockito.ArgumentMatchers.anyString;
 import static java.lang.Boolean.FALSE;
-import static java.sql.Types.NULL;
+
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+
 
 @SpringBootTest
 @AutoConfigureMockMvc
@@ -78,17 +73,19 @@ class UserControllerTest {
         MockitoAnnotations.openMocks(this); // Initialize annotated mocks
 
         // Mock data and repository method
-        User newUser = new User(1,"TestLaura", "Laura", "Stevenson", "12345", "laura@mail.com", null, 0, false);
-        List<User> userList = Arrays.asList(newUser);
+        User newUser = new User(1, "Testlaura", "Laura", "Stevenson", "12345", "laura@mail.com", "null", null, 0, FALSE);
+        List<User> userList = List.of(newUser);
 
         when(userRepository.findAll()).thenReturn(userList);
+
+        // Act and Assert
         List<User> result = userController.getAllUsers();
         verify(userRepository, times(1)).findAll();
         assertEquals(userList, result);
 
     }
     @Test
-    void getUserByIdtest() throws ResourceNotFoundException {
+    void getUserByIdTest() throws ResourceNotFoundException {
         // Arrange
         Long userId = 1L;
         User mockUser = new User();
@@ -109,11 +106,11 @@ class UserControllerTest {
 
 
     @Test
-    void updateUsertest() throws ResourceNotFoundException {
+    void updateUserTest() throws ResourceNotFoundException {
         // Arrange
         Long userId = 1L;
-        User userDetails = new User(1, "laura", "Laura", "Stevenson", "12345", "laura@mail.com", "NULL", 0, FALSE);;
-        User existingUser = new User(1,"TestAshley", "Ashley", "Mical", "45678", "ashley@mail.com", "NULL", 0, FALSE);
+        User userDetails = new User(1, "Testlaura", "Laura", "Stevenson", "12345", "laura@mail.com", "NULL", null, 0, FALSE);
+        User existingUser = new User(2,"TestAshley", "Ashley", "Mical", "45678", "ashley@mail.com", "NULL", null, 0, FALSE);
 
         when(userRepository.findById(userId)).thenReturn(Optional.of(existingUser));
         when(userRepository.save(any())).thenAnswer(invocation -> invocation.getArgument(0));
@@ -135,7 +132,7 @@ class UserControllerTest {
     }
 
     @Test
-    void createUsertest() throws Exception {
+    void createUserTest() throws Exception {
         //Arrange
         User inputUser = new User();
         inputUser.setUsername("testUser");
@@ -157,7 +154,7 @@ class UserControllerTest {
     }
 
     @Test
-    void deleteUsertest() throws ResourceNotFoundException {
+    void deleteUserTest() throws ResourceNotFoundException {
         // Mock data
         Long userId = 1L;
         User user = new User();
